--- a/jompscell.css
+++ b/jompscell.css
@@ -104,7 +104,7 @@
 
 .botaocomprar{
     font-size: 20px;
-    margin-top: 40px;
+    margin-top: 5%;
     appearance: button;
     padding: 10px 20px;
     background-color: rgb(133, 227, 233);
