--- a/jompscell.css
+++ b/jompscell.css
@@ -31,7 +31,8 @@
 .hr{clear: both;
     margin-top: 350px;}
 
-.hr2{clear: both;}
+.hr2{clear: both;
+    margin-top: 2%;}
 
 .imgprodutos{
     height: 250px;
