--- a/jompscell.css
+++ b/jompscell.css
@@ -31,8 +31,8 @@
 .hr{clear: both;
     margin-top: 350px;}
 
-.hr2{clear: both;
-    margin-top: 2%;}
+.hr2{margin-top: 2%;
+    clear: both;}
 
 .imgprodutos{
     height: 250px;
@@ -42,14 +42,12 @@
     }
 
 .divprodutos{
-    margin-left: 2%;
+    margin-left: 21px;
     margin-top: 50px;
-    margin-right: 50px;
+    margin-right: 21px;
     float: left;
     text-align: center;
 }
-
-
 
 .preco{text-align: center;
     font-weight: bold;
@@ -106,6 +104,7 @@
 .esp{margin-left: 550px;}
 
 .botaocomprar{
+    text-align: center;
     font-size: 20px;
     margin-top: 5%;
     appearance: button;
@@ -117,5 +116,3 @@
 
 .linkformat{text-decoration: none;
     color: black;}
-
-.hr3{margin-top: 10px;}
