--- a/jompscell.css
+++ b/jompscell.css
@@ -59,7 +59,7 @@
     color: black;
     text-decoration: none;
     border: 1px solid black;
-    border-radius: 10px;}
+    border-radius: 5px;}
 
 .ip14promaximg{width: 400px;
     padding-top: 30px;}
@@ -67,7 +67,7 @@
 .img-principal-iphone{width: 500px;}
 
 .div-img-principal{float: left;
-    margin: 30px 0px 2px 10px;
+    margin: 30px 0px 2px 30px;
     width: 500px;}
 
 
@@ -82,37 +82,46 @@
 }
 
 .clearfloat{clear: left;
-    float: left;}
+    float: left;
+    margin-left: 22px;}
 
 .textopromovendo{clear: both;
     text-align: center;
-    padding:10px 30px;}
+    padding: 10px 30px;}
 
 .texto-produto{padding-top: 50px;}
 
-.opcoes{margin-top: 30px;
+.opcoes{margin: 30px 0px 0px 30px;
     font-size: 14px;
     font-weight: normal;}
 
 .selectiphone{width: 200px;
     font-size: 16px;
-    display: block;}
+    display: block;
+    margin-left: 20px;
+    border-radius: 5px;
+}
 
 .select{width: 100px;
     font-size: 16px;
-    display: block;}
+    display: block;
+    margin-left: 20px;
+    border-radius: 5px;
+}
 
-.esp{margin-left: 550px;}
+.esp{margin-left: 560px;}
 
 .botaocomprar{
     text-align: center;
     font-size: 20px;
-    margin-top: 5%;
+    margin-top: 20%;
     appearance: button;
     padding: 10px 20px;
+    margin-left: 20px;
     background-color: rgb(133, 227, 233);
     color: black;
     text-decoration: none;
+    border-radius: 5px;
     border: 1px solid black;}
 
 .linkformat{text-decoration: none;
