--- a/jompscell.css
+++ b/jompscell.css
@@ -111,7 +111,7 @@
 
 .esp{margin-left: 560px;}
 
-.botaocomprar{
+/*.botaocomprar{
     text-align: center;
     font-size: 20px;
     margin-top: 20%;
@@ -122,10 +122,17 @@
     color: black;
     text-decoration: none;
     border-radius: 5px;
-    border: 1px solid black;}
+    border: 1px solid black;}*/
 
 .linkformat{text-decoration: none;
     color: black;}
 
 .tableiphones{width: 95%;}
 
+.botaocomprar1{
+    background-color: rgb(133, 227, 233);
+    font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 8px;
+    margin-top: 30px;
+    cursor: pointer;}
