--- a/jompscell.css
+++ b/jompscell.css
@@ -136,3 +136,17 @@
     border-radius: 8px;
     margin-top: 30px;
     cursor: pointer;}
+
+.iconinsta{position: relative;
+    width: 50px;
+    top: 20px;
+    left: 5px;
+    right: 10px;
+}
+
+.iconwpp{position: relative;
+    width: 50px;
+    top: 20px;
+    left: 15px;
+    }
+
