--- a/jompscell.css
+++ b/jompscell.css
@@ -95,12 +95,12 @@
     font-size: 14px;
     font-weight: normal;}
 
-.selectiphone{width: 200px;
+/*.selectiphone{width: 200px;
     font-size: 16px;
     display: block;
     margin-left: 20px;
     border-radius: 5px;
-}
+}*/
 
 .select{width: 100px;
     font-size: 16px;
@@ -129,13 +129,31 @@
 
 .tableiphones{width: 95%;}
 
-.botaocomprar1{
+#gerarLink{
     background-color: rgb(133, 227, 233);
     font-size: 20px;
     padding: 10px 20px;
     border-radius: 8px;
     margin-top: 30px;
     cursor: pointer;}
+
+#caixa1{width: 200px;
+    font-size: 16px;
+    display: block;
+    margin-left: 20px;
+    border-radius: 5px;}
+
+#caixa2{width: 100px;
+    font-size: 16px;
+    display: block;
+    margin-left: 20px;
+    border-radius: 5px;}
+
+#caixa3{width: 100px;
+    font-size: 16px;
+    display: block;
+    margin-left: 20px;
+    border-radius: 5px;}
 
 .iconinsta{position: relative;
     width: 50px;
