--- a/jompscell.css
+++ b/jompscell.css
@@ -1,13 +1,15 @@
 .topo{background-color: rgb(198, 226, 228);
     border: 1px solid #Daa520;
     border-radius: 10px;
-    margin: 0px 20px;}
+    margin: 0px 20px;
+}
 
 .logo{width: 120px;
-    margin: 5px 5px 5px 10px;}
+    margin: 5px 5px 5px 10px;
+    }
 
 .carrinho{width: 40px;
-    padding: 15px 20px 30px 10px;
+    padding: 15px 25px 30px 10px;
 }
 
 .login{width: 45px;
@@ -44,8 +46,8 @@
     margin: 10px;
     text-align: center;
     margin-top: 40px;
-
     }
+    
 
 .preco{text-align: center;
     font-weight: bold;
@@ -59,7 +61,14 @@
     color: black;
     text-decoration: none;
     border: 1px solid black;
-    border-radius: 5px;}
+    border-radius: 5px;
+    font-size: 20px;}
+
+.linkbotao:hover{
+    background: black;
+    color: rgb(133, 227, 233);
+    border: 1px solid cyan;
+    }
 
 .ip14promaximg{width: 400px;
     padding-top: 30px;}
@@ -77,17 +86,15 @@
 }
 
 .info{padding-top: 20px;
-    clear: left;
-    text-align: center;    
+    margin-left: 30px;
 }
 
 .clearfloat{clear: left;
     float: left;
     margin-left: 22px;}
 
-.textopromovendo{clear: both;
-    text-align: center;
-    padding: 10px 30px;}
+.textopromovendo{
+    margin: 0px 50px;}
 
 .texto-produto{padding-top: 50px;}
 
@@ -164,9 +171,74 @@
     right: 10px;
 }
 
+.iconinsta:hover{width: 55px;}
+
 .iconwpp{position: relative;
     width: 50px;
     top: 20px;
     left: 15px;
     }
 
+.iconwpp:hover{width: 55px;}
+
+.especificacoes{margin: 0px 50px;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media  screen and (max-width: 768px) {
+
+    
+
+    
+
+
+
+
+
+
+
+
+    
+}
