--- a/jompscell.css
+++ b/jompscell.css
@@ -124,7 +124,7 @@ h3.esp{font-weight: 900;
 p.esp{font-size: 18px;
     font-weight:400}
 
-.ul{margin-left: 550px;
+/*.ul{margin-left: 550px;
     position: absolute;
     left: 10px;
     top: 222px;
@@ -161,7 +161,7 @@ p.esp{font-size: 18px;
     text-align: center;}
 
 
-/*.botaocomprar{
+.botaocomprar{
     text-align: center;
     font-size: 20px;
     margin-top: 20%;
@@ -231,11 +231,37 @@ p.esp{font-size: 18px;
 .especificacoes{margin: 0px 50px;}
 
 
+.rodape{background-color: rgba(60, 74, 73, 0.095);
+    text-align: center;
+    padding: 20px;
+    border-radius: 5px;
+    border: 1px solid #Daa520;
+    margin: 50px 20px 0px 20px;
+    }
 
+.numrodape{position: relative;
+    left: 160px;
+    bottom: 6px;
+    display: inline;
+    font-size: 20px;
+}
 
+.logowpprodape{position: relative;
+    left: 150px;
+    top: 4px;
+    }
 
+.instarodape{position: relative;
+    display: inline;
+    font-size: 20px;
+    right: 150px;
+    bottom: 6px;
+    }
 
-
+.logoinstarodape{position: relative;
+    right: 160px;
+    top: 2px;
+}
 
 
 
